<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    android:padding="8dip"
    tools:context="com.android.implicitintentassignment.MainActivity"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:id="@+id/layout_title"
        >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/font_large"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/imageView1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/url_layout"
        >
        <TextView
            android:id="@+id/url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_medium"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/url_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="15dp"
            android:hint="@string/url_hint"
            android:inputType="textUri"
            android:background="@color/colorWhite"
            android:layout_toRightOf="@id/url_text"
            android:text="@string/default_url" />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/url_text"
            android:layout_marginTop="60dp"
            android:text="@string/launch_btn"
            android:textAllCaps="false"
            android:padding="20dp"
            android:background="@color/colorYellow"
            android:onClick="launchURL" />
    </RelativeLayout>
    <View
        android:id="@+id/horizonal_line_1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorWhite"
        android:layout_marginTop="20dp"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/phone_layout"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_medium"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="15dp"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:background="@color/colorWhite"
            android:maxLength="12"
            android:layout_toRightOf="@id/phone_label" />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/phone_label"
            android:layout_marginTop="60dp"
            android:text="@string/ring_btn"
            android:padding="20dp"
            android:background="@color/colorDarkYellow"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:onClick="ringPhone"/>
    </RelativeLayout>
    <View
        android:id="@+id/horizonal_line_2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorWhite"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btn_close_app"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/close_app_btn"
        android:textSize="@dimen/font_medium"
        android:textAllCaps="false"
        android:layout_above="@id/horizonal_line_2"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/colorBlack"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/colorWhite"
        android:onClick="closeApp" />
</LinearLayout>

